--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgres://dpg-cm0et26n7f5s73c655v0-a:5432/banklineapi_c5dz
+spring.datasource.url=jdbc:postgresql://dpg-cm0et26n7f5s73c655v0-a:5432/banklineapi_c5dz
 spring.datasource.username=admin
 spring.datasource.password=xDqm5iv8mMQL4XCfJ0E4Xcy6afb2ke1M
 
